sumo/tests/netconvert/import/XML/errors/broken_edge/edge#nolanes__empty1/errors.netconvert
Error: Empty lane number definition in edge '1'.
Quitting (on error).
